--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section>
         <h2>Introduction au Japon</h2>
         <p>Découvrez la richesse culturelle et les paysages époustouflants du Japon, de ses traditions ancestrales à ses innovations ultramodernes.</p>
-        <img src="path_to_your_image.jpg" alt="Cerisiers en fleur">
+        <img src="cerisierfleur.jpg" alt="Cerisiers en fleur">
     </section>
     <footer>
         <p>© 2024 Découvrez le Japon. Tous droits réservés.</p>
