--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
     <section>
         <h2>Introduction au Japon</h2>
         <p>Découvrez la richesse culturelle et les paysages époustouflants du Japon, de ses traditions ancestrales à ses innovations ultramodernes.</p>
-        <img src="cerisierfleur.jpg" alt="Cerisiers en fleur">
+        <div class="category-links">
+            <a href="culture.html" class="category-button" style="background-image: url('path_to_culture_image.jpg');">
+                <span>Culture</span>
+            </a>
+            <a href="tourisme.html" class="category-button" style="background-image: url('path_to_tourism_image.jpg');">
+                <span>Tourisme</span>
+            </a>
+            <a href="actualites.html" class="category-button" style="background-image: url('path_to_news_image.jpg');">
+                <span>Actualités</span>
+            </a>
+        </div>
     </section>
     <footer>
         <p>© 2024 Découvrez le Japon. Tous droits réservés.</p>
