--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="culture.html" class="category-button" style="background-image: url('path_to_culture_image.jpg');">
                 <span>Culture</span>
             </a>
-            <a href="tourisme.html" class="category-button" style="background-image: url('path_to_tourism_image.jpg');">
+            <a href="tourisme.html" class="category-button" style="background-image: url('japantemple.webp');">
                 <span>Tourisme</span>
             </a>
             <a href="actualites.html" class="category-button" style="background-image: url('path_to_news_image.jpg');">
