--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <h2>Introduction au Japon</h2>
         <p>Découvrez la richesse culturelle et les paysages époustouflants du Japon, de ses traditions ancestrales à ses innovations ultramodernes.</p>
         <div class="category-links">
-            <a href="culture.html" class="category-button" style="background-image: url('path_to_culture_image.jpg');">
+            <a href="culture.html" class="category-button" style="background-image: url('japantemple.webp');">
                 <span>Culture</span>
             </a>
-            <a href="tourisme.html" class="category-button" style="background-image: url('japantemple.webp');">
+            <a href="tourisme.html" class="category-button" style="background-image: url('tourismejapan.jpg');">
                 <span>Tourisme</span>
             </a>
-            <a href="actualites.html" class="category-button" style="background-image: url('path_to_news_image.jpg');">
+            <a href="actualites.html" class="category-button" style="background-image: url('japanflag.jpg');">
                 <span>Actualités</span>
             </a>
         </div>
