--- a/culture.html
+++ b/culture.html
@@ -2,12 +2,12 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Culture | Découvrez le Japon</title>
+    <title>Culture Japonaise | Découvrez le Japon</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Culture japonaise</h1>
+        <h1>Culture Japonaise</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
@@ -18,9 +18,56 @@
         </nav>
     </header>
     <section>
-        <h2>Les Arts Traditionnels</h2>
-        <p>Explorez les diverses formes artistiques du Japon, de la calligraphie élégante à la cérémonie du thé, chaque art transmettant des valeurs culturelles profondes.</p>
-        <img src="path_to_culture_image.jpg" alt="Art traditionnel japonais">
+        <p>La culture japonaise est vaste et complexe, riche d'une histoire millénaire et d'une modernité saisissante. Voici une liste exhaustive des éléments principaux à connaître sur la culture japonaise, incluant les arts, les traditions, la cuisine, les cérémonies, et plus encore.</p>
+        
+        <h2>Arts et Divertissement</h2>
+        <ul>
+            <li><strong>Littérature</strong> : Du poème court "haiku" aux œuvres monumentales de Murasaki Shikibu et de modernistes comme Haruki Murakami.</li>
+            <li><strong>Musique et Danse</strong> : Des formes traditionnelles comme le gagaku (musique de cour) et le nô (danse-théâtre), jusqu'aux J-Pop et Visual Kei.</li>
+            <li><strong>Cinéma</strong> : Les films de Akira Kurosawa, les studios Ghibli, et la montée en popularité du cinéma d'animation (anime).</li>
+            <li><strong>Arts Visuels</strong> : L'ukiyo-e (estampes japonaises), la poterie, la laque, et les arts modernes.</li>
+        </ul>
+
+        <h2>Traditions et Pratiques Culturelles</h2>
+        <ul>
+            <li><strong>Théâtre</strong> : Noh, Kabuki et Bunraku (théâtre de marionnettes).</li>
+            <li><strong>Martial</strong> : Arts martiaux traditionnels tels que le judo, le kendo, l'aikido, et le karate.</li>
+            <li><strong>Vêtements Traditionnels</strong> : Kimono, yukata, hakama, et les techniques de tissage et de teinture comme le shibori.</li>
+            <li><strong>Festivals (Matsuri)</strong> : Hanami (festival des cerisiers en fleurs), Gion Matsuri à Kyoto, et Awa Odori.</li>
+            <li><strong>Rites et Cérémonies</strong> : Cérémonie du thé (chanoyu), mariages shinto, et funérailles bouddhistes.</li>
+        </ul>
+
+        <h2>Cuisine Japonaise</h2>
+        <ul>
+            <li><strong>Plats Typiques</strong> : Sushi, sashimi, ramen, tempura, et tonkatsu.</li>
+            <li><strong>Boissons</strong> : Sake (riz fermenté), shochu (distillat), et thé vert japonais.</li>
+            <li><strong>Principes de Cuisine</strong> : Umami comme saveur fondamentale, importance de la saisonnalité des ingrédients, et présentation esthétique des plats.</li>
+        </ul>
+
+        <h2>Religions et Philosophies</h2>
+        <ul>
+            <li><strong>Shintoïsme</strong> : La religion indigène du Japon, centrée sur le culte des kami (esprits de la nature).</li>
+            <li><strong>Bouddhisme</strong> : Introduit au Japon au 6ème siècle, avec plusieurs écoles influentes comme le Zen et le Pure Land.</li>
+            <li><strong>Confucianisme et Taoïsme</strong> : Influence sur les normes sociales et la philosophie.</li>
+        </ul>
+
+        <h2>Jardins et Architecture</h2>
+        <ul>
+            <li><strong>Jardins Japonais</strong> : Conçus pour la méditation et la réflexion, caractérisés par des éléments comme des rochers, de l'eau et des miniaturisations de paysages naturels.</li>
+            <li><strong>Architecture</strong> : De l'architecture traditionnelle des temples et des sanctuaires à l'architecture moderne de designers comme Kenzo Tange et Tadao Ando.</li>
+        </ul>
+
+        <h2>Langue et Écriture</h2>
+        <ul>
+            <li><strong>Langue</strong> : Japonais, avec des niveaux de politesse variés et un usage contextuel complexe.</li>
+            <li><strong>Systèmes d'Écriture</strong> : Kanji (caractères dérivés du chinois), Hiragana et Katakana.</li>
+        </ul>
+
+        <h2>Innovations et Influences Modernes</h2>
+        <ul>
+            <li><strong>Technologie</strong> : Avancées en robotique, électronique, et automobiles.</li>
+            <li><strong>Pop Culture</strong> : Manga et anime, jeux vidéo, et la mode de Harajuku.</li>
+        </ul>
     </section>
     <footer>
         <p>© 2024 Découvrez le Japon. Tous droits réservés.</p>
