--- a/culture.html
+++ b/culture.html
@@ -33,6 +33,7 @@
             <li><strong>Théâtre</strong> : Noh, Kabuki et Bunraku (théâtre de marionnettes).</li>
             <li><strong>Martial</strong> : Arts martiaux traditionnels tels que le judo, le kendo, l'aikido, et le karate.</li>
             <li><strong>Vêtements Traditionnels</strong> : Kimono, yukata, hakama, et les techniques de tissage et de teinture comme le shibori.</li>
+            <img src="kimono.jpg" alt="Kimono">
             <li><strong>Festivals (Matsuri)</strong> : Hanami (festival des cerisiers en fleurs), Gion Matsuri à Kyoto, et Awa Odori.</li>
             <li><strong>Rites et Cérémonies</strong> : Cérémonie du thé (chanoyu), mariages shinto, et funérailles bouddhistes.</li>
         </ul>
@@ -40,6 +41,7 @@
         <h2>Cuisine Japonaise</h2>
         <ul>
             <li><strong>Plats Typiques</strong> : Sushi, sashimi, ramen, tempura, et tonkatsu.</li>
+            <img src="ramen.jpg" alt="Ramen">
             <li><strong>Boissons</strong> : Sake (riz fermenté), shochu (distillat), et thé vert japonais.</li>
             <li><strong>Principes de Cuisine</strong> : Umami comme saveur fondamentale, importance de la saisonnalité des ingrédients, et présentation esthétique des plats.</li>
         </ul>
@@ -61,12 +63,14 @@
         <ul>
             <li><strong>Langue</strong> : Japonais, avec des niveaux de politesse variés et un usage contextuel complexe.</li>
             <li><strong>Systèmes d'Écriture</strong> : Kanji (caractères dérivés du chinois), Hiragana et Katakana.</li>
+            <img src="japanlangue.jpg" alt="Hiragana, Katakana et Kanji">
         </ul>
 
         <h2>Innovations et Influences Modernes</h2>
         <ul>
             <li><strong>Technologie</strong> : Avancées en robotique, électronique, et automobiles.</li>
             <li><strong>Pop Culture</strong> : Manga et anime, jeux vidéo, et la mode de Harajuku.</li>
+            <img src="popculture.jpg" alt="Pop culture japonaise">
         </ul>
     </section>
     <footer>
