--- a/tourisme.html
+++ b/tourisme.html
@@ -11,16 +11,60 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="culture.html">Culture</a></li>
-                <li><a href="tourisme.html">Tourisme</a></li>
-                <li><a href="actualites.html">Actualités</a></li>
             </ul>
         </nav>
     </header>
     <section>
-        <h2>Explorez le Japon</h2>
-        <p>Voyagez à travers les villes historiques de Kyoto et Nara, découvrez la modernité de Tokyo et les merveilles naturelles de Hokkaido.</p>
-        <img src="path_to_tourism_image.jpg" alt="Mont Fuji">
+        <p>Le Japon offre une richesse incroyable de sites touristiques, mélangeant l'ancien et le moderne, la nature et la technologie. Voici une liste des principales attractions et activités touristiques au Japon, divisée en plusieurs catégories pour mieux explorer les divers aspects du pays.</p>
+
+        <div class="center-text">
+        <h2>Villes Majeures</h2>
+            </div>
+        <ul>
+            <li><strong>Tokyo</strong> : Une métropole vibrante connue pour ses quartiers comme Shinjuku, Shibuya, et Akihabara, célèbres pour le shopping, la technologie et la pop culture.</li>
+            <li><strong>Kyoto</strong> : Ancienne capitale du Japon, réputée pour ses temples, ses sanctuaires et ses jardins traditionnels, ainsi que pour le district de Gion, célèbre pour ses geishas.</li>
+            <li><strong>Osaka</strong> : Connue pour son ambiance décontractée, son château d'Osaka, et sa scène culinaire, notamment le takoyaki et l'okonomiyaki.</li>
+            <li><strong>Hokkaido</strong> : Appréciée pour ses magnifiques paysages naturels, ses stations de ski en hiver et ses festivals de fleurs en été.</li>
+            <li><strong>Okinawa</strong> : Un groupe d'îles tropicales connu pour ses plages, ses récifs coralliens, et une culture distincte influencée par son histoire unique.</li>
+        </ul>
+
+        <div class="center-text">
+        <h2>Sites Historiques et Culturels</h2>
+            </div>
+        <ul>
+            <li><strong>Temple de Kinkaku-ji (Pavillon d'Or) à Kyoto</strong> : Un magnifique exemple d'architecture japonaise entouré d'un petit lac.</li>
+            <li><strong>Hiroshima Peace Memorial (Genbaku Dome)</strong> : Un mémorial aux victimes de la bombe atomique et un symbole de la paix.</li>
+            <li><strong>Château de Himeji</strong> : Un des douze châteaux originaux du Japon, inscrit au patrimoine mondial de l'UNESCO.</li>
+            <li><strong>Village historique de Shirakawa-go</strong> : Connu pour ses maisons traditionnelles au toit de chaume dans un cadre montagneux.</li>
+        </ul>
+
+        <div class="center-text">
+        <h2>Expériences Culturelles</h2>
+            </div>
+        <ul>
+            <li><strong>Assister à une cérémonie du thé</strong> : Expérience de l'art traditionnel du thé japonais, particulièrement à Kyoto.</li>
+            <li><strong>Participer à un festival</strong> : Les matsuri (festivals) offrent une expérience vibrante de la culture japonaise avec des danses, musiques, et nourritures traditionnelles.</li>
+            <li><strong>Visiter un onsen</strong> : Les sources chaudes naturelles japonaises, où vous pouvez vous détendre dans un bain thermal traditionnel.</li>
+        </ul>
+
+        <div class="center-text">
+        <h2>Nature et Paysage</h2>
+            </div>
+        <ul>
+            <li><strong>Mont Fuji</strong> : Le point culminant du Japon, populaire pour l'escalade en été et admiré pour sa beauté majestueuse toute l'année.</li>
+            <li><strong>Vallée de Jigokudani</strong> : Où l'on peut voir des macaques japonais se baigner dans des sources chaudes naturelles.</li>
+            <li><strong>Jardin Kenroku-en à Kanazawa</strong> : Un des trois grands jardins du Japon, célèbre pour sa beauté et son équilibre parfait.</li>
+            <li><strong>Gorges de Kurobe</strong> : Un des spectacles naturels les plus impressionnants du Japon, accessible par un train pittoresque.</li>
+        </ul>
+
+        <div class="center-text">
+        <h2>Shopping et Gastronomie</h2>
+            </div>
+        <ul>
+            <li><strong>Déguster des sushis au marché aux poissons de Tsukiji à Tokyo</strong> : Un incontournable pour les amateurs de fruits de mer frais.</li>
+            <li><strong>Shopping à Ginza, Tokyo</strong> : Où des boutiques de luxe côtoient des détaillants traditionnels japonais.</li>
+            <li><strong>Explorer la rue Takeshita à Harajuku</strong> : Connue pour ses tendances de mode unique et son ambiance jeune et dynamique.</li>
+        </ul>
     </section>
     <footer>
         <p>© 2024 Découvrez le Japon. Tous droits réservés.</p>
