--- a/actualites.html
+++ b/actualites.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Actualités japonaises</h1>
+        <h1>Actualités du Japon</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
@@ -18,12 +18,18 @@
         </nav>
     </header>
     <section>
-        <h2>Dernières Nouvelles</h2>
-        <p>Suivez les dernières innovations technologiques et événements culturels majeurs au Japon. Restez informé sur les changements influents dans la société japonaise.</p>
-        <img src="path_to_news_image.jpg" alt="Technologie japonaise">
+        <h2>Développements Économiques</h2>
+        <p>Le yen japonais a connu des fluctuations importantes, atteignant récemment son niveau le plus bas depuis 1990 avant de se reprendre quelque peu. Cette instabilité est surveillée de près par les investisseurs et les décideurs politiques. La production industrielle du Japon a augmenté de 3,8 % en mars, et les entreprises japonaises, telles que Panasonic, dominent les demandes de brevets mondiaux pour les batteries tout solide.</p>
+        
+        <h2>Nouvelles Culturelles</h2>
+        <p>Juro Kara, une figure notable de la scène théâtrale d'avant-garde d'après-guerre au Japon, est décédé. Dans le domaine sportif, l'équipe de soccer du Japon s'est qualifiée pour la finale de la Coupe U23 d'Asie, sécurisant une place aux Jeux Olympiques aux côtés de l'Ouzbékistan.</p>
+        
+        <h2>Questions Sociales et Environnementales</h2>
+        <p>Sur le plan social, les restaurants japonais en Chine cherchent des moyens de faire face à l'interdiction par Pékin des importations de fruits de mer en provenance du Japon, en utilisant des sources alternatives comme Hong Kong ou des ingrédients locaux. Les préoccupations environnementales sont également au premier plan, notamment avec les efforts relatifs au démantèlement de la centrale nucléaire de Fukushima.</p>
     </section>
     <footer>
         <p>© 2024 Découvrez le Japon. Tous droits réservés.</p>
     </footer>
 </body>
 </html>
+
