--- a/culture.html
+++ b/culture.html
@@ -88,7 +88,7 @@
             <li><strong>Technologie</strong> : Avancées en robotique, électronique, et automobiles.</li>
             <li><strong>Pop Culture</strong> : Manga et anime, jeux vidéo, et la mode de Harajuku.</li>
             <div class="center-text">
-            <img src="popculture.jpg" alt="Pop culture japonaise" width=30% height=30%>
+            <img src="popculture.webp" alt="Pop culture japonaise" width=30% height=30%>
             </div>
         </ul>
     </section>
