--- a/culture.html
+++ b/culture.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header style="background-image: url('japantemple.jpg');">
         <h1>Culture Japonaise</h1>
         <nav>
             <ul>
@@ -89,5 +89,8 @@
             </div>
         </ul>
     </section>
+    <footer>
+        <p>© 2024 Découvrez le Japon. Tous droits réservés.</p>
+    </footer>
 </body>
 </html>
