--- a/actualites.html
+++ b/actualites.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+     <header style="background-image: url('japanflag.jpg');">
         <h1>Actualités du Japon</h1>
         <nav>
             <ul>
