--- a/tourisme.html
+++ b/tourisme.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+     <header style="background-image: url('tourismejapan.jpg');">
         <h1>Tourisme au Japon</h1>
         <nav>
             <ul>
