--- a/actualites.html
+++ b/actualites.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <header style="background-image: url('japanflag.jpg');">
+     <header>
         <h1>Actualités du Japon</h1>
         <nav>
             <ul>
