--- a/culture.html
+++ b/culture.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header style="background-image: url('japantemple.jpg');">
+    <header>
         <h1>Culture Japonaise</h1>
         <nav>
             <ul>
