--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Bienvenue sur notre site dédié au Japon</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
+                <li><a href="index.html">Page d'accueil</a></li>
             </ul>
         </nav>
     </header>
