--- a/tourisme.html
+++ b/tourisme.html
@@ -10,7 +10,7 @@
         <h1>Tourisme au Japon</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
+                <li><a href="index.html">Page d'accueil</a></li>
             </ul>
         </nav>
     </header>
