--- a/culture.html
+++ b/culture.html
@@ -10,7 +10,7 @@
         <h1>Culture Japonaise</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
+                <li><a href="index.html">Page d'accueil</a></li>
             </ul>
         </nav>
     </header>
