--- a/index.html
+++ b/index.html
@@ -11,21 +11,27 @@
     </header>
     <section>
         <div class="category-description">
+            <div class="center-text">
             <h2>Culture</h2>
+            </div>
             <p>La culture japonaise est un mélange fascinant de tradition et de modernité. Les arts traditionnels tels que l'ikebana (arrangement floral), le théâtre Noh, le Kabuki, et la cérémonie du thé continuent d'être pratiqués et valorisés. Parallèlement, le Japon est à l'avant-garde de la culture pop et de la technologie, donnant naissance à des phénomènes mondiaux tels que les mangas, les animes et les jeux vidéo.</p>
             <a href="culture.html" class="category-button" style="background-image: url('japantemple.webp');">
                 <span>Culture</span>
             </a>
         </div>
         <div class="category-description">
+            <div class="center-text">
             <h2>Tourisme</h2>
+            </div>
             <p>Le Japon est célèbre pour ses paysages naturels variés et souvent spectaculaires, des montagnes couvertes de forêts — dominées par le mont Fuji, un volcan inactif et symbole emblématique du pays — jusqu'à ses côtes pittoresques parsemées de plages et de criques. Le pays est situé sur la Ceinture de Feu du Pacifique, ce qui explique son activité volcanique élevée et sa fréquence de tremblements de terre. Cette géographie a façonné une société qui est à la fois respectueuse et réceptive à son environnement naturel, intégrant des pratiques durables longtemps avant que cela ne devienne une nécessité mondiale.</p>
             <a href="tourisme.html" class="category-button" style="background-image: url('tourismejapan.jpg');">
                 <span>Tourisme</span>
             </a>
         </div>
         <div class="category-description">
+            <div class="center-text">
             <h2>Actualités</h2>
+            </div>
             <p>La société japonaise est connue pour son harmonie et son ordre, avec un fort respect pour la communauté et les règles sociales. L'éducation joue un rôle crucial, avec un système éducatif rigoureux qui prépare les jeunes Japonais à être des citoyens compétitifs dans une économie mondialisée. La société japonaise est également confrontée à des défis, notamment une population vieillissante et les pressions d'une vie urbaine rapide, qui testent ses structures sociales traditionnelles.</p>
             <a href="actualites.html" class="category-button" style="background-image: url('japanflag.jpg');">
                 <span>Actualités</span>
