--- a/index.html
+++ b/index.html
@@ -38,8 +38,23 @@
             </a>
         </div>
     </section>
+    <button onclick="topFunction()" id="myBtn" title="Retour en haut">Retour en haut</button>
     <footer>
         <p>© 2024 Découvrez le Japon. Tous droits réservés.</p>
     </footer>
+    <script>
+        window.onscroll = function() {scrollFunction()};
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("myBtn").style.display = "block";
+            } else {
+                document.getElementById("myBtn").style.display = "none";
+            }
+        }
+        function topFunction() {
+            document.body.scrollTop = 0; // For Safari
+            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE, and Opera
+        }
+    </script>
 </body>
 </html>
