--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             </a>
         </div>
     </section>
+    <div class="center-text">
     <button onclick="topFunction()" id="myBtn" title="Retour en haut">Retour en haut</button>
+    </div>
     <script>
         window.onscroll = function() {scrollFunction()};
         function scrollFunction() {
