--- a/actualites.html
+++ b/actualites.html
@@ -17,7 +17,7 @@
     <section>
         <h2>Développements Économiques</h2>
         <p>Le yen japonais a connu des fluctuations importantes, atteignant récemment son niveau le plus bas depuis 1990 avant de se reprendre quelque peu. Cette instabilité est surveillée de près par les investisseurs et les décideurs politiques. La production industrielle du Japon a augmenté de 3,8 % en mars, et les entreprises japonaises, telles que Panasonic, dominent les demandes de brevets mondiaux pour les batteries tout solide.</p>
-        
+        <p>1 Euro = 164,92 Yen</p>
         <h2>Nouvelles Culturelles</h2>
         <p>Juro Kara, une figure notable de la scène théâtrale d'avant-garde d'après-guerre au Japon, est décédé. Dans le domaine sportif, l'équipe de soccer du Japon s'est qualifiée pour la finale de la Coupe U23 d'Asie, sécurisant une place aux Jeux Olympiques aux côtés de l'Ouzbékistan.</p>
         
