--- a/actualites.html
+++ b/actualites.html
@@ -15,13 +15,19 @@
         </nav>
     </header>
     <section>
+        <div class="center-text">
         <h2>Développements Économiques</h2>
+        </div>
         <p>Le yen japonais a connu des fluctuations importantes, atteignant récemment son niveau le plus bas depuis 1990 avant de se reprendre quelque peu. Cette instabilité est surveillée de près par les investisseurs et les décideurs politiques. La production industrielle du Japon a augmenté de 3,8 % en mars, et les entreprises japonaises, telles que Panasonic, dominent les demandes de brevets mondiaux pour les batteries tout solide.</p>
+        <div class="center-text">
         <p>1 Euro = 164,92 Yen</p>
+        </div>
         <h2>Nouvelles Culturelles</h2>
         <p>Juro Kara, une figure notable de la scène théâtrale d'avant-garde d'après-guerre au Japon, est décédé. Dans le domaine sportif, l'équipe de soccer du Japon s'est qualifiée pour la finale de la Coupe U23 d'Asie, sécurisant une place aux Jeux Olympiques aux côtés de l'Ouzbékistan.</p>
-        
+
+        <div class="center-text">
         <h2>Questions Sociales et Environnementales</h2>
+        </div>
         <p>Sur le plan social, les restaurants japonais en Chine cherchent des moyens de faire face à l'interdiction par Pékin des importations de fruits de mer en provenance du Japon, en utilisant des sources alternatives comme Hong Kong ou des ingrédients locaux. Les préoccupations environnementales sont également au premier plan, notamment avec les efforts relatifs au démantèlement de la centrale nucléaire de Fukushima.</p>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Retour en haut">Retour en haut</button>
