--- a/actualites.html
+++ b/actualites.html
@@ -22,7 +22,10 @@
         <div class="center-text">
         <p>1 Euro = 164,92 Yen</p>
         </div>
+
+        <div class="center-text">
         <h2>Nouvelles Culturelles</h2>
+        </div>
         <p>Juro Kara, une figure notable de la scène théâtrale d'avant-garde d'après-guerre au Japon, est décédé. Dans le domaine sportif, l'équipe de soccer du Japon s'est qualifiée pour la finale de la Coupe U23 d'Asie, sécurisant une place aux Jeux Olympiques aux côtés de l'Ouzbékistan.</p>
 
         <div class="center-text">
