--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img src="logojapan.png" alt="Descriptive Text" id="headerImage">
+        <img src="japanlogo.png" alt="Descriptive Text" id="headerImage"><br />
         <h1>Bienvenue sur notre site dédié au Japon</h1>
     </header>
     <section>
