--- a/culture.html
+++ b/culture.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <img src="japanlogo.png" alt="Descriptive Text" id="headerImage"><br />
         <h1>Culture Japonaise</h1>
         <nav>
             <ul>
