--- a/tourisme.html
+++ b/tourisme.html
@@ -7,6 +7,7 @@
 </head>
 <body>
      <header>
+        <img src="japanlogo.png" alt="Descriptive Text" id="headerImage"><br />
         <h1>Tourisme au Japon</h1>
         <nav>
             <ul>
