--- a/actualites.html
+++ b/actualites.html
@@ -23,6 +23,9 @@
         <div class="center-text">
         <p>1 Euro = 164,92 Yen</p>
         </div>
+        <div class="center-text">
+        <img src="yen.jpg" alt="Yen" width=30% height=30%>
+        </div>
 
         <div class="center-text">
         <h2>Nouvelles Culturelles</h2>
