--- a/actualites.html
+++ b/actualites.html
@@ -11,7 +11,7 @@
         <h1>Actualités du Japon</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
+                <li><a href="index.html">Page d'accueil</a></li>
             </ul>
         </nav>
     </header>
