--- a/actualites.html
+++ b/actualites.html
@@ -36,7 +36,7 @@
         <div class="center-text">
         <h2>Questions Sociales et Environnementales</h2>
         </div>
-        <p>Sur le plan social, les restaurants japonais en Chine cherchent des moyens de faire face à l'interdiction par Pékin des importations de fruits de mer en provenance du Japon, en utilisant des sources alternatives comme Hong Kong ou des ingrédients locaux. Les préoccupations environnementales sont également au premier plan, notamment avec les efforts relatifs au démantèlement de la centrale nucléaire de Fukushima.</p>
+        <p>Sur le plan social, les restaurants japonais en Chine cherchent des moyens de faire face à l'interdiction par Pékin des importations de fruits de mer en provenance du Japon, en utilisant des sources alternatives comme Hong Kong ou des ingrédients locaux. Les préoccupations environnementales sont également au premier plan, notamment avec les efforts relatifs au démantèlement de la centrale nucléaire de Fukushima.<br /><br /></p>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Retour en haut">Retour en haut</button>
     <script>
