--- a/culture.html
+++ b/culture.html
@@ -24,7 +24,7 @@
             <li><strong>Littérature</strong> : Du poème court "haiku" aux œuvres monumentales de Murasaki Shikibu et de modernistes comme Haruki Murakami.</li>
             <li><strong>Musique et Danse</strong> : Des formes traditionnelles comme le gagaku (musique de cour) et le nô (danse-théâtre), jusqu'aux J-Pop et Visual Kei.</li>
             <li><strong>Cinéma</strong> : Les films de Akira Kurosawa, les studios Ghibli, et la montée en popularité du cinéma d'animation (anime).</li>
-            <li><strong>Arts Visuels</strong> : L'ukiyo-e (estampes japonaises), la poterie, la laque, et les arts modernes.</li>
+            <li><strong>Arts Visuels</strong> : L'ukiyo-e (estampes japonaises), la poterie, la laque, et les arts modernes.<br /></li>
         </ul>
 
         <div class="center-text">
@@ -35,7 +35,7 @@
             <li><strong>Martial</strong> : Arts martiaux traditionnels tels que le judo, le kendo, l'aikido, et le karate.</li>
             <li><strong>Vêtements Traditionnels</strong> : Kimono, yukata, hakama, et les techniques de tissage et de teinture comme le shibori.</li>
             <li><strong>Festivals (Matsuri)</strong> : Hanami (festival des cerisiers en fleurs), Gion Matsuri à Kyoto, et Awa Odori.</li>
-            <li><strong>Rites et Cérémonies</strong> : Cérémonie du thé (chanoyu), mariages shinto, et funérailles bouddhistes.</li>
+            <li><strong>Rites et Cérémonies</strong> : Cérémonie du thé (chanoyu), mariages shinto, et funérailles bouddhistes.<br /></li>
             <div class="center-text">
             <img src="kimono.jpg" alt="Kimono" width=30% height=30%>
             </div>
@@ -47,7 +47,7 @@
         <ul>
             <li><strong>Plats Typiques</strong> : Sushi, sashimi, ramen, tempura, et tonkatsu.</li>
             <li><strong>Boissons</strong> : Sake (riz fermenté), shochu (distillat), et thé vert japonais.</li>
-            <li><strong>Principes de Cuisine</strong> : Umami comme saveur fondamentale, importance de la saisonnalité des ingrédients, et présentation esthétique des plats.</li>
+            <li><strong>Principes de Cuisine</strong> : Umami comme saveur fondamentale, importance de la saisonnalité des ingrédients, et présentation esthétique des plats.<br /></li>
             <div class="center-text">
             <img src="ramen.jpg" alt="Ramen" width=30% height=30%>
             </div>
@@ -58,7 +58,7 @@
         <ul>
             <li><strong>Shintoïsme</strong> : La religion indigène du Japon, centrée sur le culte des kami (esprits de la nature).</li>
             <li><strong>Bouddhisme</strong> : Introduit au Japon au 6ème siècle, avec plusieurs écoles influentes comme le Zen et le Pure Land.</li>
-            <li><strong>Confucianisme et Taoïsme</strong> : Influence sur les normes sociales et la philosophie.</li>
+            <li><strong>Confucianisme et Taoïsme</strong> : Influence sur les normes sociales et la philosophie.<br /></li>
             <div class="center-text">
             <img src="shintoisme.webp" alt="Shintoïsme" width=30% height=30%>
             </div>
@@ -69,7 +69,7 @@
         </div>
         <ul>
             <li><strong>Jardins Japonais</strong> : Conçus pour la méditation et la réflexion, caractérisés par des éléments comme des rochers, de l'eau et des miniaturisations de paysages naturels.</li>
-            <li><strong>Architecture</strong> : De l'architecture traditionnelle des temples et des sanctuaires à l'architecture moderne de designers comme Kenzo Tange et Tadao Ando.</li>
+            <li><strong>Architecture</strong> : De l'architecture traditionnelle des temples et des sanctuaires à l'architecture moderne de designers comme Kenzo Tange et Tadao Ando.<br /></li>
             <div class="center-text">
             <img src="archijapan.jpeg" alt="Architecture du Japon" width=30% height=30%>
             </div>
@@ -80,7 +80,7 @@
         </div>
         <ul>
             <li><strong>Langue</strong> : Japonais, avec des niveaux de politesse variés et un usage contextuel complexe.</li>
-            <li><strong>Systèmes d'Écriture</strong> : Kanji (caractères dérivés du chinois), Hiragana et Katakana.</li>
+            <li><strong>Systèmes d'Écriture</strong> : Kanji (caractères dérivés du chinois), Hiragana et Katakana.<br /></li>
             <div class="center-text">
             <img src="japanlangue.jpg" alt="Hiragana, Katakana et Kanji" width=30% height=30%>
             </div>
@@ -90,7 +90,7 @@
         </div>
         <ul>
             <li><strong>Technologie</strong> : Avancées en robotique, électronique, et automobiles.</li>
-            <li><strong>Pop Culture</strong> : Manga et anime, jeux vidéo, et la mode de Harajuku.</li>
+            <li><strong>Pop Culture</strong> : Manga et anime, jeux vidéo, et la mode de Harajuku.<br /></li>
             <div class="center-text">
             <img src="popculture.webp" alt="Pop culture japonaise" width=30% height=30%>
             </div>
