--- a/tourisme.html
+++ b/tourisme.html
@@ -26,7 +26,7 @@
             <li><strong>Kyoto</strong> : Ancienne capitale du Japon, réputée pour ses temples, ses sanctuaires et ses jardins traditionnels, ainsi que pour le district de Gion, célèbre pour ses geishas.</li>
             <li><strong>Osaka</strong> : Connue pour son ambiance décontractée, son château d'Osaka, et sa scène culinaire, notamment le takoyaki et l'okonomiyaki.</li>
             <li><strong>Hokkaido</strong> : Appréciée pour ses magnifiques paysages naturels, ses stations de ski en hiver et ses festivals de fleurs en été.</li>
-            <li><strong>Okinawa</strong> : Un groupe d'îles tropicales connu pour ses plages, ses récifs coralliens, et une culture distincte influencée par son histoire unique.</li>
+            <li><strong>Okinawa</strong> : Un groupe d'îles tropicales connu pour ses plages, ses récifs coralliens, et une culture distincte influencée par son histoire unique.<br /></li>
             <div class="center-text">
             <img src="tokyo.jpg" alt="Tokyo" width=30% height=30%>
             </div>
@@ -39,7 +39,7 @@
             <li><strong>Temple de Kinkaku-ji (Pavillon d'Or) à Kyoto</strong> : Un magnifique exemple d'architecture japonaise entouré d'un petit lac.</li>
             <li><strong>Hiroshima Peace Memorial (Genbaku Dome)</strong> : Un mémorial aux victimes de la bombe atomique et un symbole de la paix.</li>
             <li><strong>Château de Himeji</strong> : Un des douze châteaux originaux du Japon, inscrit au patrimoine mondial de l'UNESCO.</li>
-            <li><strong>Village historique de Shirakawa-go</strong> : Connu pour ses maisons traditionnelles au toit de chaume dans un cadre montagneux.</li>
+            <li><strong>Village historique de Shirakawa-go</strong> : Connu pour ses maisons traditionnelles au toit de chaume dans un cadre montagneux.<br /></li>
             <div class="center-text">
             <img src="himeji.jpg" alt="Chateau de Himeji" width=30% height=30%>
             </div>
@@ -51,7 +51,7 @@
         <ul>
             <li><strong>Assister à une cérémonie du thé</strong> : Expérience de l'art traditionnel du thé japonais, particulièrement à Kyoto.</li>
             <li><strong>Participer à un festival</strong> : Les matsuri (festivals) offrent une expérience vibrante de la culture japonaise avec des danses, musiques, et nourritures traditionnelles.</li>
-            <li><strong>Visiter un onsen</strong> : Les sources chaudes naturelles japonaises, où vous pouvez vous détendre dans un bain thermal traditionnel.</li>
+            <li><strong>Visiter un onsen</strong> : Les sources chaudes naturelles japonaises, où vous pouvez vous détendre dans un bain thermal traditionnel.<br /></li>
             <div class="center-text">
             <img src="onsen.jpg" alt="Onsen" width=30% height=30%>
             </div>
@@ -64,7 +64,7 @@
             <li><strong>Mont Fuji</strong> : Le point culminant du Japon, populaire pour l'escalade en été et admiré pour sa beauté majestueuse toute l'année.</li>
             <li><strong>Vallée de Jigokudani</strong> : Où l'on peut voir des macaques japonais se baigner dans des sources chaudes naturelles.</li>
             <li><strong>Jardin Kenroku-en à Kanazawa</strong> : Un des trois grands jardins du Japon, célèbre pour sa beauté et son équilibre parfait.</li>
-            <li><strong>Gorges de Kurobe</strong> : Un des spectacles naturels les plus impressionnants du Japon, accessible par un train pittoresque.</li>
+            <li><strong>Gorges de Kurobe</strong> : Un des spectacles naturels les plus impressionnants du Japon, accessible par un train pittoresque.<br /></li>
             <div class="center-text">
             <img src="fuji.jpg" alt="Mont Fuji" width=30% height=30%>
             </div>
@@ -76,7 +76,7 @@
         <ul>
             <li><strong>Déguster des sushis au marché aux poissons de Tsukiji à Tokyo</strong> : Un incontournable pour les amateurs de fruits de mer frais.</li>
             <li><strong>Shopping à Ginza, Tokyo</strong> : Où des boutiques de luxe côtoient des détaillants traditionnels japonais.</li>
-            <li><strong>Explorer la rue Takeshita à Harajuku</strong> : Connue pour ses tendances de mode unique et son ambiance jeune et dynamique.</li>
+            <li><strong>Explorer la rue Takeshita à Harajuku</strong> : Connue pour ses tendances de mode unique et son ambiance jeune et dynamique.<br /></li>
             <div class="center-text">
             <img src="tsukiji.jpg" alt="Marché aux poissons de Tsukiji" width=30% height=30%>
             </div>
